@@ -39,8 +39,8 @@ to give it the pgAdmin look and feel.
       #ReportDetails th { border-bottom-color: #777777; border-bottom-style: solid; border-bottom-width: 2px; }
       .ReportDetailsOddDataRow { background-color: #dddddd; }
       .ReportDetailsEvenDataRow { background-color: #eeeeee; }
-      .ReportTableHeaderCell { background-color: #dddddd; color: #009ace; vertical-align: top; font-size: 80%; }
-      .ReportTableValueCell { vertical-align: top; font-size: 80%; }
+      .ReportTableHeaderCell { background-color: #dddddd; color: #009ace; vertical-align: top; font-size: 80%; white-space: nowrap; }
+      .ReportTableValueCell { vertical-align: top; font-size: 80%; white-space: nowrap; }
       .ReportTableInfo { font-size: 80%; font-style: italic; }
       #ReportFooter { font-weight: bold; font-size: 80%; text-align: right; background-color: #009ace; color: #eeeeee; margin-top: 10px; padding: 2px; border-bottom-style: solid; border-bottom-width: 2px; border-top-style: solid; border-top-width: 2px; border-color: #999999; }
       #ReportFooter a { color: #ffffff; text-decoration: none; }
@@ -111,7 +111,6 @@ Report generated by &#60;a href=&#34;http://www.pgadmin.org/&#34;&#62;pgAdmin&#6
   &#60;/xsl:if&#62;
 
   &#60;xsl:if test=&#34;count(../section[@id = current()/@id]/table/columns/column) &#62; 0&#34;&#62;
-    &#60;h3&#62;Data&#60;/h3&#62;
     &#60;table&#62;
       &#60;tr&#62;
         &#60;xsl:apply-templates select=&#34;../section[@id = current()/@id]/table/columns/column&#34;&#62;
@@ -131,7 +130,6 @@ Report generated by &#60;a href=&#34;http://www.pgadmin.org/&#34;&#62;pgAdmin&#6
   &#60;/xsl:if&#62;
 
   &#60;xsl:if test=&#34;../section[@id = current()/@id]/sql != &#39;&#39;&#34;&#62;
-    &#60;h3&#62;SQL&#60;/h3&#62;
     &#60;pre class=&#34;ReportSQL&#34;&#62;
       &#60;xsl:call-template name=&#34;substitute&#34;&#62;
          &#60;xsl:with-param name=&#34;string&#34; select=&#34;../section[@id = current()/@id]/sql&#34; /&#62;
@@ -177,7 +175,7 @@ Report generated by &#60;a href=&#34;http://www.pgadmin.org/&#34;&#62;pgAdmin&#6
         &#60;/xsl:call-template&#62;
       &#60;/xsl:when&#62;
       &#60;xsl:otherwise&#62;
-        &#60;xsl:text&#62;&#38;#0160;&#60;/xsl:text&#62;
+        &#60;xsl:text&#62; &#60;/xsl:text&#62;
       &#60;/xsl:otherwise&#62;
     &#60;/xsl:choose&#62;
   &#60;/td&#62;
